syntax = "proto3";

option go_package = "sermon";

service Sermon {
    rpc GetSermon(GetSermonRequest) returns (GetSermonResponse){};
    rpc GetAllSermons(GetAllSermonsRequest) returns (GetAllSermonsResponse){};
    rpc CreateSermon(CreateSermonRequest) returns (CreateSermonResponse){};
    rpc DeleteSermon(DeleteSermonRequest) returns (Empty){};
    rpc UpdateSermon(UpdateSermonRequest) returns (UpdateSermonResponse){};
}

message CreateSermonRequest {
    string Title = 1;
    string Content = 2;
    string Preacher = 3;
    int32 Category = 4;
    string FeaturedImage = 5;
}

message CreateSermonResponse {
    string Title = 1;
    string Content = 2;
    string Preacher = 3;
    int32 Category = 4;
    string FeaturedImage = 5;
}

message UpdateSermonRequest {
    int32 ID = 1;
    string Title = 2;
    string Content = 3;
    string Preacher = 4;
    int32 Category = 5;
    string FeaturedImage = 6;
}

message UpdateSermonResponse {
    int32 ID = 1;
    string Title = 2;
    string Content = 3;
    string Preacher = 4;
    int32 Category = 5;
    string FeaturedImage = 6;
}

message DeleteSermonRequest {
    int32 ID = 1;
}

message Empty {

}

message GetSermonRequest {
    int32 ID = 1;
}

message GetSermonResponse {
    string Title = 1;
    string Content = 2;
    string Preacher = 3;
    int32 Category = 4;
    string FeaturedImage = 5;
}

message GetAllSermonsRequest {
    int32 PageNumber = 1;
    int32 ResultPerPage = 2;
}

message GetAllSermonsResponse {
    int32 TotalCount = 1;
    int32 PageNumber = 2;
    int32 ResultPerPage = 3;
    repeated GetSermonResponse Sermons = 4;
}